; Below stanzas are based on
; https://github.com/ocaml/dune/tree/776813d59bf22cb1ce35ed2299b4b8c0e30fae21/bench/micro

(library
 (name dataframe_builders_bench)
 (modules dataframe_builders_bench)
 (library_flags -linkall)
 (preprocess
  (pps ppx_bench))
 (libraries core polars core_bench.inline_benchmarks))

(executable
 (name dataframe_builders_bench_main)
 (modules dataframe_builders_bench_main)
 (libraries dataframe_builders_bench core_bench.inline_benchmarks))
