(rule
 (targets libpolars_ocaml.a dllpolars_ocaml.so)
 (enabled_if
  (= %{profile} release))
 (deps
  (glob_files ../rust/Cargo.*)
  (glob_files ../rust/polars-ocaml/Cargo.*)
  (glob_files ../rust/polars-ocaml/src/*.rs)
  (glob_files ../rust/polars-ocaml-macros/Cargo.*)
  (glob_files ../rust/polars-ocaml-macros/src/*.rs))
 (action
  (progn
   (run sh -c "cd %{project_root}/rust && cargo build --release")
   (run
    sh
    -c
    "cp %{project_root}/rust/target/release/libpolars_ocaml.so ./dllpolars_ocaml.so 2> /dev/null || cp %{project_root}/rust/target/release/libpolars_ocaml.dylib ./dllpolars_ocaml.so")
   (run
    cp
    %{project_root}/rust/target/release/libpolars_ocaml.a
    libpolars_ocaml.a))))

(rule
 (targets libpolars_ocaml.a dllpolars_ocaml.so)
 (enabled_if
  (not
   (= %{profile} release)))
 (deps
  (glob_files ../rust/Cargo.*)
  (glob_files ../rust/polars-ocaml/Cargo.*)
  (glob_files ../rust/polars-ocaml/src/*.rs)
  (glob_files ../rust/polars-ocaml-macros/Cargo.*)
  (glob_files ../rust/polars-ocaml-macros/src/*.rs))
 (action
  (progn
   (run sh -c "cd %{project_root}/rust && cargo build")
   (run
    sh
    -c
    "cp %{project_root}/rust/target/debug/libpolars_ocaml.so ./dllpolars_ocaml.so 2> /dev/null || cp %{project_root}/rust/target/debug/libpolars_ocaml.dylib ./dllpolars_ocaml.so")
   (run
    cp
    %{project_root}/rust/target/debug/libpolars_ocaml.a
    libpolars_ocaml.a))))

(library
 (name polars)
 (public_name polars)
 (foreign_archives polars_ocaml)
 (libraries core core_kernel.nonempty_list core_unix core_unix.time_ns_unix)
 (inline_tests)
 (library_flags -ccopt -fuse-ld=mold)
 (preprocess
  (pps ppx_jane ppx_typed_fields)))

(mdx
 (files :standard - *.mli)
 (libraries core core_kernel.nonempty_list polars)
 (preludes mdx_prelude/mdx_prelude.txt))

(env
 (utop
  (env-vars
   (OCAML_INTEROP_NO_CAML_STARTUP true))))
