(library
 (name polars)
 (public_name polars)
 (libraries
  core
  core_kernel.nonempty_list
  core_unix
  core_unix.time_ns_unix
  polars_bindings)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_typed_fields)))

(mdx
 (files :standard - *.mli)
 (libraries core core_kernel.nonempty_list polars)
 (preludes mdx_prelude/mdx_prelude.txt))
