[package]
name = "polars-ocaml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
chrono = "0.4.26"
expect-test = "1.4.1"
ocaml = "0.22.4"
ocaml-interop = "0.8.8"
ocaml-sys = "0.23.0"
polars = { version = "0.30.0", features = [ "lazy", "dot_diagram", "parquet", "approx_unique", "dtype-date", "dtype-datetime", "dtype-i8", "dtype-i16", "dtype-u8", "dtype-u16", "random", "describe", "streaming" ] }
