(library
 (name polars_tests)
 (libraries base_quickcheck core expect_test_helpers_core polars)
 (inline_tests
  ; TODO: Ideally we can test the bytecode bindings in tests as well, but AFAICT
  ; ocaml-interop currently doesn't work with bytecode compilation
  ; (https://github.com/tizoc/ocaml-interop/issues/49#issuecomment-1627816642).
  ; (modes native byte)
  (deps
   (glob_files ./data/*.csv)))
 (library_flags -ccopt -fuse-ld=mold)
 (preprocess
  (pps ppx_jane)))
