[package]
name = "polars-ocaml-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"

[dev-dependencies]
expect-test = "1.4.1"
prettyplease = "0.2"

[lib]
proc-macro = true