[package]
name = "polars-ocaml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
chrono = "0.4.26"
ocaml = "0.22.4"
ocaml-interop = "0.9.2"
ocaml-sys = "0.23.0"
polars-sql = "0.32.1"
smartstring = "1.0.1"
polars-ocaml-macros = { path = "../polars-ocaml-macros" }

[dependencies.polars]
version = "0.32.1"
features = [
    "approx_unique",
    "asof_join",
    "describe",
    "diagonal_concat",
    "dot_diagram",
    "dtype-date",
    "dtype-datetime",
    "dtype-i16",
    "dtype-i8",
    "dtype-u16",
    "dtype-u8",
    "dynamic_groupby",
    "horizontal_concat",
    "interpolate",
    "json",
    "lazy",
    "list_eval",
    "mode",
    "parquet",
    "pivot",
    "random",
    "rank",
    "round_series",
    "semi_anti_join",
    "streaming",
    "timezones",
]

[dev-dependencies]
expect-test = "1.4.1"
