[package]
name = "polars-ocaml"
version.workspace = true
edition.workspace = true

# Once cargo-msrv supports using workspace inheritance, move this into ../Cargo.toml:
# https://github.com/foresterre/cargo-msrv/issues/590
rust-version = "1.70.0"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
chrono = "^0.4.31"
ocaml = "0.22.4"
ocaml-interop = "0.10.0"
ocaml-sys = "0.23.0"
polars-sql = "0.32.1"
smartstring = "1.0.1"
polars-ocaml-macros = { path = "../polars-ocaml-macros" }
arrow2 = "0.18.0"
chrono-tz = "0.8.3"

[dependencies.polars]
version = "0.32.1"
features = [
    "approx_unique",
    "asof_join",
    "describe",
    "diagonal_concat",
    "dot_diagram",
    "dtype-date",
    "dtype-datetime",
    "dtype-i16",
    "dtype-i8",
    "dtype-u16",
    "dtype-u8",
    "dtype-categorical",
    "dynamic_groupby",
    "horizontal_concat",
    "interpolate",
    "json",
    "lazy",
    "list_eval",
    "mode",
    "parquet",
    "partition_by",
    "pivot",
    "random",
    "rank",
    "round_series",
    "semi_anti_join",
    "streaming",
    "timezones",
]

[dev-dependencies]
expect-test = "1.4.1"
